--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.analysis.typeCheckingMode": "off"
+    "python.analysis.typeCheckingMode": "off",
+    "sonarlint.connectedMode.project": {
+        "connectionId": "https-sonarqube-butrosgroot-com-",
+        "projectKey": "butros10games_Korfbal_546ecb9d-69bc-44e0-b084-429dbc86ce38"
+    }
 }
