--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "https-sonarqube-butrosgroot-com-",
         "projectKey": "butros10games_Korfbal_546ecb9d-69bc-44e0-b084-429dbc86ce38"
-    }
+    },
+    "python.envFile": "${workspaceFolder}/.env"
 }
