--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -4,8 +4,8 @@ module = Korfbal.wsgi:application
 master = true
 processes = 10
 http-timeout = 86400
-http = 192.168.2.8:1664
+http = 192.168.2.90:1664
 wsgi-file = Korfbal/wsgi.py
 logto = /home/butros/Korfbal/uwsgi.log
-virtualenv = /home/butros/korfbal_env
+virtualenv = /home/butros/Korfbal/.env
 touch-reload = /home/butros/Korfbal/
