--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -8,4 +8,4 @@ http = 192.168.2.90:1664
 wsgi-file = Korfbal/wsgi.py
 logto = /home/butros/Korfbal/uwsgi.log
 virtualenv = /home/butros/Korfbal/.env
-touch-reload = /home/butros/Korfbal/
+py-autoreload = 1
