--- a/static_workfile/json/manifest.json
+++ b/static_workfile/json/manifest.json
@@ -8,7 +8,7 @@
             "type": "image/png"
       }
     ],
-    "start_url": "/teams/",
+    "start_url": "/catalog/",
     "background_color": "#1b1b1b",
     "display": "standalone",
     "scope": "/",
