--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -7,5 +7,5 @@ http-timeout = 86400
 http = 192.168.2.90:1664
 wsgi-file = Korfbal/wsgi.py
 logto = /home/butros/Korfbal/uwsgi.log
-virtualenv = /home/butros/Korfbal/.env
-py-autoreload = 1
+touch-reload = /home/butros/Korfbal/reload.flag
+py-autoreload = 2
