--- a/kwt-uwsgi.service
+++ b/kwt-uwsgi.service
@@ -7,7 +7,7 @@ User=root
 Group=root
 WorkingDirectory=/home/butros/Korfbal
 ExecStart=/home/butros/Korfbal/.env/bin/uwsgi --ini /home/butros/Korfbal/uwsgi.ini
-ExecReload=/bin/kill -s HUP $MAINPID
+ExecReload=/bin/bash -c "touch /home/butros/Korfbal/reload.flag && kill -HUP $MAINPID"
 
 [Install]
 WantedBy=multi-user.target
