--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -25,11 +25,10 @@ jobs:
           python-version: '3.13'
       - run: python -m pip install flake8
       - name: flake8
-        # Pinned to v3.0.0.
         uses: liskin/gh-problem-matcher-wrap@e7b7beaaafa52524748b31a381160759d68d61fb
         with:
           linters: flake8
-          run: flake8
+          run: flake8 --exclude=migrations
 
   isort:
     runs-on: ubuntu-latest
@@ -42,16 +41,20 @@ jobs:
           python-version: '3.13'
       - run: python -m pip install isort
       - name: isort
-        # Pinned to v3.0.0.
         uses: liskin/gh-problem-matcher-wrap@e7b7beaaafa52524748b31a381160759d68d61fb
         with:
           linters: isort
-          run: isort --check --diff django tests scripts
+          run: isort --check --diff django tests scripts --skip=migrations
 
   black:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: black
-        uses: psf/black@stable
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+      - run: python -m pip install black
+      - name: Run black
+        run: black --check --exclude 'migrations' .
