--- a/package.json
+++ b/package.json
@@ -77,9 +77,16 @@
     "yocto-queue": "^0.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.14.0",
+    "babel-loader": "^9.2.1",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^9.14.0",
-    "globals": "^15.12.0"
+    "globals": "^15.12.0",
+    "webpack": "^5.96.1",
+    "webpack-bundle-tracker": "^3.1.1",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
