--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -17,13 +17,17 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '18'
 
     - name: Install Dependencies
       run: npm ci
 
     - name: Run ESLint
       run: npm run lint
+
+    - name: Ensure ESLint Report Exists
+      run: |
+        touch eslint-report.txt
 
     - name: Upload ESLint Results
       if: ${{ failure() }}
