--- a/static_workfile/json/manifest.json
+++ b/static_workfile/json/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "KWT",
-    "name": "Korfbal Wedstrijd Tracker",
+    "name": "korfbal Wedstrijd Tracker",
     "icons": [
       {
             "src": "/static/images/logo/KWT_logo.png",
