--- a/kwt-daphne.service
+++ b/kwt-daphne.service
@@ -4,8 +4,8 @@ After=network.target
 
 [Service]
 User=butros
-WorkingDirectory=/home/butros/Korfbal
-ExecStart=/bin/bash -c 'source /home/butros/Korfbal/.env/bin/activate && /home/butros/Korfbal/.env/bin/daphne -p 8001 -b 0.0.0.0 Korfbal.asgi:application'
+WorkingDirectory=/home/butros/korfbal
+ExecStart=/bin/bash -c 'source /home/butros/korfbal/.env/bin/activate && /home/butros/korfbal/.env/bin/daphne -p 8001 -b 0.0.0.0 korfbal.asgi:application'
 Restart=always
 SyslogIdentifier=butrosgroot
 
