--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=butros10games_Korfbal_546ecb9d-69bc-44e0-b084-429dbc86ce38
-sonar.projectName=Korfbal Wedstrijd tracker
+sonar.projectName=korfbal Wedstrijd tracker
 sonar.projectVersion=1.0.0
 sonar.python.version=3.13
