--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,11 +1,11 @@
 [uwsgi]
-chdir = /home/butros/Korfbal
-module = Korfbal.wsgi:application
+chdir = /home/butros/korfbal
+module = korfbal.wsgi:application
 master = true
 processes = 10
 http-timeout = 86400
 http = 192.168.2.90:1664
-wsgi-file = Korfbal/wsgi.py
-logto = /home/butros/Korfbal/uwsgi.log
-touch-reload = /home/butros/Korfbal/reload.flag
+wsgi-file = korfbal/wsgi.py
+logto = /home/butros/korfbal/uwsgi.log
+touch-reload = /home/butros/korfbal/reload.flag
 py-autoreload = 2
