--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -21,17 +21,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # Build and push uWSGI Docker image
+  
       - name: Build and Push uWSGI Image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/kwt-uwsgi:${{ github.ref_name }} -f uwsgi.Dockerfile .
+          docker tag ${{ secrets.DOCKER_USERNAME }}/kwt-uwsgi:${{ github.ref_name }} ${{ secrets.DOCKER_USERNAME }}/kwt-uwsgi:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/kwt-uwsgi:${{ github.ref_name }}
           docker push ${{ secrets.DOCKER_USERNAME }}/kwt-uwsgi:latest
 
-      # Build and push Daphne Docker image
+      # Build and push Daphne Docker image with version and latest tags
       - name: Build and Push Daphne Image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/kwt-daphne:${{ github.ref_name }} -f daphne.Dockerfile .
+          docker tag ${{ secrets.DOCKER_USERNAME }}/kwt-daphne:${{ github.ref_name }} ${{ secrets.DOCKER_USERNAME }}/kwt-daphne:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/kwt-daphne:${{ github.ref_name }}
           docker push ${{ secrets.DOCKER_USERNAME }}/kwt-daphne:latest
