--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: List repository files (debugging)
+        run: ls -R
+
       # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
