# Change loging location

--- a/uwsgi-docker.ini
+++ b/uwsgi-docker.ini
@@ -6,4 +6,6 @@ processes = 10
 http-timeout = 86400
 http = 0.0.0.0:1664
 wsgi-file = /kwt_uwsgi/korfbal/wsgi.py
-logto = /kwt_uwsgi/logs/uwsgi.log
+
+# Redirect logs to stdout
+logto = /dev/stdout
