--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -19,11 +19,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
-      - run: python -m pip install flake8
+          python-version: '3.11'
+
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-flake8-6.1.0
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - run: python -m pip install flake8==6.1.0
+
       - name: flake8
         uses: liskin/gh-problem-matcher-wrap@e7b7beaaafa52524748b31a381160759d68d61fb
         with:
@@ -35,11 +46,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
-      - run: python -m pip install isort
+          python-version: '3.11'
+
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-isort-5.12.0
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - run: python -m pip install isort==5.12.0
+
       - name: isort
         uses: liskin/gh-problem-matcher-wrap@e7b7beaaafa52524748b31a381160759d68d61fb
         with:
@@ -51,6 +73,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-black-23.9.1
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - run: python -m pip install black==23.9.1
+
       - name: Black
-        uses: psf/black@stable
-  
+        run: black --check --diff .
