--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -15,6 +15,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # Set up Docker Buildx with docker-container driver
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver: docker-container
+
       # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
