# Docker local deployment
## Update
- Local docker dev depolyment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,35 +2,24 @@ services:
   kwt-uwsgi:
     build:
       context: .
-      dockerfile: uwsgi.Dockerfile
+      dockerfile: ./docker/uwsgi.Dockerfile
     container_name: kwt-uwsgi
-    command: python manage.py runserver 0.0.0.0:1664
     ports:
       - "1664:1664"
     env_file:
       - .env
-    volumes:
-      - ./apps:/kwt_uwsgi/apps
-      - ./korfbal:/kwt_uwsgi/korfbal
-      - ./templates:/kwt_uwsgi/templates
-      - ./manage.py:/kwt_uwsgi/manage.py
-      - ./.env:/kwt_uwsgi/.env
     networks:
       - kwt-net
 
   kwt-daphne:
     build:
       context: .
-      dockerfile: daphne.Dockerfile
+      dockerfile: ./docker/daphne.Dockerfile
     container_name: kwt-daphne
     ports:
       - "8001:8001"
     env_file:
       - .env
-    volumes:
-      - ./apps:/kwt_uwsgi/apps
-      - ./korfbal:/kwt_uwsgi/korfbal
-      - ./manage.py:/kwt_uwsgi/manage.py
     depends_on:
       - kwt-redis
     networks:
@@ -45,7 +34,7 @@ services:
   kwt-nginx:
     build:
       context: .
-      dockerfile: nginx.Dockerfile
+      dockerfile: ./docker/nginx.Dockerfile
     container_name: kwt-nginx
     ports:
       - "80:80"
@@ -53,39 +42,55 @@ services:
       - kwt-uwsgi
       - kwt-daphne
     volumes:
-      - ./static:/app/static
-      - ./media:/app/media
       - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
       - kwt-net
 
-  kwt-sftp:
-    image: atmoz/sftp
-    container_name: kwt-sftp
-    ports:
-      - "2222:22"
-    volumes:
-      - ./sftp-data:/home/sftpuser/upload
+  kwt-minio:
+    image: minio/minio:latest
+    container_name: kwt-minio
+    command: server /data --console-address ":9001"
     environment:
-      SFTP_USERS: "sftpuser:password:1001"
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - ./minio_data:/data
     networks:
       - kwt-net
 
-  collectstatic:
+  kwt-collectstatic:
     build:
       context: .
-      dockerfile: collectstatic.Dockerfile
-    container_name: collectstatic
+      dockerfile: ./docker/collectstatic.Dockerfile
+    container_name: kwt-collectstatic
     depends_on:
-      - kwt-uwsgi
-      - kwt-sftp
+      - kwt-minio
+    environment:
+      - .env
+    networks:
+      - kwt-net
+
+  kwt-migrate:
+    build:
+      context: .
+      dockerfile: ./docker/uwsgi.Dockerfile
+    container_name: kwt-migrate
+    command: python manage.py migrate
+    env_file:
+      - .env
+    networks:
+      - kwt-net
+  
+  kwt-postgres:
+    image: postgres:latest
+    container_name: kwt-postgres
     env_file:
       - .env
     volumes:
-      - ./apps:/kwt_uwsgi/apps
-      - ./korfbal:/kwt_uwsgi/korfbal
-      - ./static_workfile:/kwt_uwsgi/static_workfile
-      - ./manage.py:/kwt_uwsgi/manage.py
+      - ./postgres_data:/var/lib/postgresql/data
     networks:
       - kwt-net
 
