--- a/nginx.conf
+++ b/nginx.conf
@@ -38,11 +38,18 @@ http {
         }
 
         location /static/ {
-            alias /app/static/;
+            proxy_pass http://kwt-minio:9000/static/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        # Proxy for media files from MinIO
         location /media/ {
-            alias /app/media/;
+            proxy_pass http://kwt-minio:9000/media/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
