--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -10,11 +10,9 @@ services:
     networks:
       - kwt-net
     volumes:
-      - ./apps:/app/apps
-      - ./korfbal:/app/korfbal
-      - ./templates:/app/templates
-      - ./manage.py:/app/manage.py
-      - ./.env:/app/.env
+      - ./apps:/kwt_uwsgi/apps
+      - ./korfbal:/kwt_uwsgi/korfbal
+      - ./manage.py:/kwt_uwsgi/manage.py
     depends_on:
       kwt-postgres:
         condition: service_healthy
@@ -34,7 +32,6 @@ services:
       - ./korfbal:/app/korfbal
       - ./static_workfile:/app/static_workfile
       - ./manage.py:/app/manage.py
-      - ./.env:/app/.env
     depends_on:
       kwt-migrate:
         condition: service_completed_successfully
@@ -52,7 +49,6 @@ services:
       - ./korfbal:/kwt_uwsgi/korfbal
       - ./templates:/kwt_uwsgi/templates
       - ./manage.py:/kwt_uwsgi/manage.py
-      - ./.env:/kwt_uwsgi/.env
     networks:
       - kwt-net
     depends_on:
@@ -82,6 +78,21 @@ services:
     networks:
       - kwt-net
 
+  kwt-nginx:
+    build:
+      context: .
+      dockerfile: ./docker/nginx.Dockerfile
+    container_name: kwt-nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - kwt-uwsgi
+      - kwt-daphne
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - kwt-net
+
   kwt-postgres:
     image: postgres:latest
     container_name: kwt-postgres
@@ -97,21 +108,6 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
-
-  kwt-nginx:
-    build:
-      context: .
-      dockerfile: ./docker/nginx.Dockerfile
-    container_name: kwt-nginx
-    ports:
-      - "80:80"
-    depends_on:
-      - kwt-uwsgi
-      - kwt-daphne
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      - kwt-net
 
   kwt-minio:
     image: minio/minio:latest
