--- a/.github/workflows/sync_to_monorepo.yml
+++ b/.github/workflows/sync_to_monorepo.yml
@@ -55,10 +55,14 @@ jobs:
         run: |
           # Ensure target directory exists
           mkdir -p monorepo/${{ env.TARGET_LOCATION }}
-        
-          # Rsync files to the target directory
+
+          # Exclude the monorepo/ folder so it doesn't get re-copied into itself
           echo "Syncing files to monorepo/${{ env.TARGET_LOCATION }}/"
-          rsync -av --delete --exclude '.git/' ./ monorepo/${{ env.TARGET_LOCATION }}
+          rsync -av \
+            --delete \
+            --exclude '.git/' \
+            --exclude 'monorepo/' \
+            . monorepo/${{ env.TARGET_LOCATION }}
 
       # Step 4: Commit and Push Changes
       - name: Commit and Push Changes
